# codeloom

./: .dockerignore  .gitignore  CONTRIBUTING.md  HISTORY.md  MANIFEST.in  NOTICE  README.md  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: issue.yml
.github/workflows/: ci.yml
codeloom/: __init__.py  analytics.py  args.py  args_formatter.py  branding.py  cli.py  commands.py  copypaste.py  deprecated.py  editor.py  exceptions.py  gui.py  help.py  history.py  io.py  linter.py  llm.py  main.py  mdstream.py  models.py  onboarding.py  openrouter.py  reasoning_tags.py  repo.py  repomap.py  report.py  scrape.py  sendchat.py  urls.py  utils.py  versioncheck.py  voice.py  waiting.py  watch.py
codeloom/coders/: architect_coder.py  base_coder.py  editblock_coder.py  help_coder.py  help_prompts.py  search_replace.py  single_wholefile_func_coder.py  wholefile_coder.py  wholefile_func_coder.py
codeloom/resources/: __init__.py
codeloom/website/: __init__.py
docker/: Dockerfile
docs/ai-loop/: done.md  requirements.md
scripts/: 30k-image.py  Dockerfile.jekyll  __init__.py  blame.py  check_codeloom_acceptance.py  clean_metadata.py  dl_icons.py  history_prompts.py  homepage.py  issues.py  jekyll_run.sh  logo_svg.py  my_models.py  recording_audio.py  redact-cast.py  tsl_pack_langs.py  update-blame.sh  update-docs.sh  update-history.py  versionbump.py  yank-old-versions.py
tests/basic/: __init__.py  test_acceptance_script.py  test_analytics.py  test_aws_credentials.py  test_branding.py  test_cli_metadata.py  test_coder.py  test_commands.py  test_deprecated.py  test_editblock.py  test_editor.py  test_exceptions.py  test_find_or_blocks.py  test_history.py  test_io.py  test_linter.py  (+23 more)
(+9 files in other folders)
